testsuite/gnatprove/tests/ug__exceptions_bad/test.out

exceptions_bad.adb:16:25: error: formal parameter of mode "in out" in consequence of Exceptional_Cases is not allowed in SPARK
   16 |                        A (I) = (if I < Index then A'Old (I) + 1 else A'Old (I))));
      |                        ^ here
  only parameters passed by reference are allowed
  violation of aspect SPARK_Mode at line 1
    1 |procedure Exceptions_Bad with SPARK_Mode is
      |                              ^ here
gnatprove: error during flow analysis and proof
